# dfdrift

./: .gitignore  README.md  main.py  pyproject.toml  sample.py  sample_custom_path.py  tox.ini
.github/workflows/: ci.yml
dev/: PUBLISHING.md
dev/prompts/: 10_incoming_webhook.md  11_refactor_shape_check.md  12_fix_example_bug.md  1_create.md  2_refactor_validator.md  3_validate_and_alert.md  4_implicit_validation.md  5_pypi.md  6_add_tests.md  7_actions.md  8_slack_notification.md  9_gcs_stroage.md
dfdrift/: __init__.py  alerters.py  validator.py
dfvalidate/: __init__.py  validator.py
direct_slack_schemas/: schemas.json
examples/: 1_simple_alert.py  2_pandas_interface.py  3_production_gcs_slack.py  basic_usage_example.py  gcs_slack_integration_example.py  gcs_storage_example.py  slack_notification_example.py
pandas_slack_schemas/: schemas.json
samples/: sample.py  sample_changing_schema.py  sample_custom_path.py  sample_pandas_import.py
slack_schemas/: schemas.json
tests/: test_gcs_storage.py  test_integration.py  test_pandas_module.py  test_slack_alerter.py  test_validator.py
